Fix search input UI in `FindOrCreateEntity` dialog: * Use common `SearchInput` and `NoSearchResults` components in the dialog; * Debounce search input when performing a lookup for an existing entity in the dialog; * Fix loading spinner alignment, display error state as well; * Reduce `NoSearchResults` text color a bit.

--- a/styles/utility/_noSearchResults.scss
+++ b/styles/utility/_noSearchResults.scss
@@ -1,4 +1,5 @@
 .reactodia-no-search-results {
   text-align: center;
   font-style: italic;
+  color: #757575;
 }
